12348
Fails as follows in 2.12.0-{M4,M5} for me. Expected to have a different failure mode when compiling under -Xexperimental due to -Yoverride-vars having been included (until recently).
 
{code}
/Users/adriaan/Library/Preferences/IdeaIC2016.2/scratches/scratch_7.scala:6: error: overriding variable value in class Node of type Option[Boolean];
 method value cannot override a mutable variable
  override def value = ???
               ^
/Users/adriaan/Library/Preferences/IdeaIC2016.2/scratches/scratch_7.scala:8: error: overriding variable value in class Node of type Option[Boolean];
 method value_= cannot override a mutable variable
  override def value_=(b: Option[Boolean]) = ???
               ^
two errors found
{code}
